# v1

./: .gitignore  pyproject.toml  readme.md  requirements.txt
gcp-infrastructure/: README.md  backend.tf  iam.tf  main.tf  notebooks.tf  services.tf  terraform.tfvars
iam/: README.md  iam.tf  main.tf  terraform.tfvars  variables.tf
ifr/: backtesting.py  test_backtesting.py
notebooks/: 00_OpenAI_Finance_Multi_Agent_LLMs.ipynb  01_Gemini_Finance_Multi_Agent_LLMs.ipynb
src/: __init__.py  agents.py  main.py  preprocessing.py  prompts.py  stats.py  stocks.py  visuals.py
src/scripts/: simple_automation.py  trading_script.py
